--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 			<section class="cards">
 			
 				<div class="card">
-					<img class="" src="lhttps://www.pexels.com/photo/woman-in-white-and-brown-floral-dress-4380970/" alt="" />
+					<img class="" src="https://pixabay.com/illustrations/chair-fabric-cloth-fancy-seat-4070161/" alt="" />
 					<div class="product_info">
 					<div class="">
 					<h3>black t-shirt</span></h3>
