--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 	<body>
 		<header>
 			<div class="logo">
-				<span>e-commerce</span>
+				<span>astra</span>
 			</div>
 			<div class="links">
 	       <span class="icofont-facebook"></span>
